# OpenPlayground

./: .gitignore  README.md
01-Papers/Computer Vision/: Deep Sliding Shapes for Amodal 3D Object Detection.pptx
IndoorData/: CapturePoints_Large.pcd  capturepoint_0.pcd  capturepoint_0.txt  capturepoint_1.pcd  capturepoint_1.txt  capturepoint_test.pcd  capturepoint_test.txt  environment.pcd  flagStart.ply  flagStop.ply  square3d.tsp  testdata_singlesurface.txt
PhysicsModelBase/: Eigen.props  OpenGL.props  PCL.props  PhysicsModelBase.sln  cv64-VS2013.props
PhysicsModelBase/PhysicsModelBase/: GL-Utility-Debug.props  GL-Utility-Release.props  PhysicsModelBase.cpp  PhysicsModelBase.vcxproj  PhysicsModelBase.vcxproj.filters  ReadMe.txt  physics.cpp  stdafx.cpp  stdafx.h
PropertySheets/: Boost-vs12.props  CudaSDK.props  KinectSDK.props  OpenNI2.props  PCL-180-CUDA.props  PCL-180-QT.props  PCL-180.props  PCL.props  cv64-VS2013-CUDA.props  cv64-VS2013.props
RGBD-LaneDetector/: CMakeLists.txt  RGBD_Recorder.cpp  Test_Matching_ATC2017.cpp  Test_Matching_Synth.cpp  Test_PCL.cpp  Test_Pointcloud.cpp  Test_RansacPCL.cpp  Test_TemplateMatching.cpp
RGBD-LaneDetector/CMakeModules/: CudaUtils.cmake  FindRealSense.cmake
RGBD-LaneDetector/ImgProc/: DataIO.cpp  DataIO.h  ImgProc.cpp  ImgProc.h  LaneDetector.cpp  LaneDetector.h  types.h
RGBD-LaneDetector/ImgProc/cuda/: ImgProcCuda.cu  ImgProcCuda.h
RGBD-LaneDetector/Tests/: CMakeLists.txt  Test_TemplateMatching.cpp
RGBD-LaneDetector/Utils/: PCL_Utils.cpp  PCL_Utils.hpp
RGBD-Recorder/: CMakeLists.txt  TumRecorder.cpp
RGBD-Recorder/CMakeModules/: FindRealSense.cmake
SwarmRobotics/: SwarmRobotics.sln
SwarmRobotics/Display_Result/: Display_Result.cpp  Display_Result.vcxproj  Display_Result.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
SwarmRobotics/Display_Result_Qt/: Display_Result_Qt.rc  Display_Result_Qt.vcxproj  Display_Result_Qt.vcxproj.filters  Display_result_qt.cpp  Display_result_qt.h  Display_result_qt.qrc  Display_result_qt.ui  PCLStorage.cpp  PCLStorage.h  PCLViewer.cpp  PCLViewer.h  PlanarCreator.cpp  PlanarCreator.h  ProcessBox.cpp  ProcessBox.h  ProcessBox.ui  VisualConnector.cpp  VisualConnector.h  WorldSegmentation.cpp  WorldSegmentation.h  main.cpp  stdafx.h
SwarmRobotics/Display_Result_Qt/GeneratedFiles/: qrc_Display_result_qt.cpp  ui_Display_result_qt.h  ui_ProcessBox.h
SwarmRobotics/Lib_D-PSO/: Lib_D-PSO.vcxproj  Lib_D-PSO.vcxproj.filters  Particle.cpp  Particle.h  Position.cpp  Position.h  ReadMe.txt  Swarm.cpp  Swarm.h  Velocity.cpp  Velocity.h  stdafx.cpp
SwarmRobotics/Lib_D-PSO_CUDA/: Lib_D-PSO_CUDA.vcxproj  ReadMe.txt  stdafx.cpp
SwarmRobotics/Lib_Segmentation/: Lib_Segmentation.vcxproj  ReadMe.txt  stdafx.cpp
SwarmRobotics/SimCUDA/: KernelCu.cu  KernelCu.h  ReadMe.txt  SimCUDA.cpp  SimCUDA.vcxproj  SimCUDA.vcxproj.filters  stdafx.cpp
SwarmRobotics/SwarmRobotics/: SwarmRobotics.vcxproj
SwarmRobotics/Test_CUDA/: GPU_Particle.cu  GPU_Particle.h  GPU_Swarm.cu  GPU_Swarm.h  GraphGPU.cu  GraphGPU.h  ReadMe.txt  Test_CUDA.cpp  Test_CUDA.vcxproj  Test_CUDA.vcxproj.filters  stdafx.cpp  stdafx.h
SwarmRobotics/Test_Something/: AstarGraph-0.txt  AstarGraph.txt  MinHeap.cpp  MinHeap.h  PathFinder.cpp  PathFinder.h  ReadMe.txt  SearchNode.cpp  SearchNode.h  Test_Something.cpp  Test_Something.vcxproj  Test_Something.vcxproj.filters  World.cpp  World.h  stdafx.cpp  stdafx.h
SwarmRobotics/Test_Visualization/: ReadMe.txt  Test_Visualization.cpp  Test_Visualization.vcxproj  Test_Visualization.vcxproj.filters  stdafx.cpp
TestTF/: TestTF.py  udacity-Regularization.py  udacity-SGD.py
